<package format="2">
  <name>eve_msgs</name>
  <version>0.0.1</version>
  <description>Control message for Eve</description>
  <maintainer email="ai_head@projectmanas.in">Sarthak Mittal</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
