<?xml version="1.0"?>
<package format="2">
  	
  	<name>eve_description</name>
	<version>0.0.1</version>
	<description>Provides a URDF for Eve</description>
	
	<maintainer email="ai_head@projectmanas.in">Sarthak Mittal</maintainer>
	
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>urdf</depend>

</package>
